init: project settings